<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SportWear</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>

    <!-- Menu -->
    <string name="user_desideria">Desideria</string>
    <string name="menu_sport_note">运动记录</string>
    <string name="menu_train">训练</string>
    <string name="menu_friends">朋友</string>
    <string name="menu_setting">设置</string>
    <string name="menu_about">关于</string>

    <!--sport note-->
    <string name="today">今天</string>
    <string name="calorie">Cal</string>
    <string name="walk">步行</string>
    <string name="run">跑步</string>
    <string name="bike">骑行</string>

    <!--train-->





    <string name="steps">steps</string>
    <string name="kilometers">kilometers</string>
    <string name="miles">miles</string>
    <string name="steps_per_minute">steps / minute</string>
    <string name="kilometers_per_hour">kilometers / hour</string>
    <string name="miles_per_hour">miles / hour</string>
    <string name="calories_burned">calories burned</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">inches</string>
    <string name="kilograms">kilograms</string>
    <string name="pounds">pounds</string>
</resources>
