<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp">
        <ImageButton
            android:id="@+id/btn_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_pre"/>
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textColor="@color/button_material_dark"
            android:gravity="center"
            android:textSize="18dp"/>
        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_next"/>
        </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_circle_drawable"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calorie"
                android:textColor="@color/white"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3000"
                android:textSize="24sp"
                android:textColor="@color/white"/>
            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:background="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4000"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            </LinearLayout>

        </FrameLayout>
    <RelativeLayout
        android:id="@+id/rlyt_walk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_walk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_walk"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_walk"
            android:layout_centerVertical="true"
            android:text="@string/walk"
            android:textColor="@color/button_material_dark"/>
        <ImageView
            android:id="@+id/iv_walk_more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_more_info"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/tv_walk_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/iv_walk_more_info"
            android:layout_centerVertical="true"
            android:textColor="@color/button_material_dark"
            android:text="3000Cal   2h 15min"/>

        </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlyt_run"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_walk"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_run"
            android:layout_centerVertical="true"
            android:text="@string/run"
            android:textColor="@color/button_material_dark"/>
        <ImageView
            android:id="@+id/iv_run_more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_more_info"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/tv_run_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/iv_run_more_info"
            android:layout_centerVertical="true"
            android:textColor="@color/button_material_dark"
            android:text="3000Cal   2h 15min"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlyt_bike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_bike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_walk"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_bike"
            android:layout_centerVertical="true"
            android:text="@string/bike"
            android:textColor="@color/button_material_dark"/>
        <ImageView
            android:id="@+id/iv_bike_more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_more_info"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/tv_bike_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/iv_bike_more_info"
            android:layout_centerVertical="true"
            android:textColor="@color/button_material_dark"
            android:text="3000Cal   2h 15min"/>

    </RelativeLayout>
    <com.db.chart.view.BarChartView
        xmlns:chart="http://schemas.android.com/apk/res-auto"
        android:id="@+id/barchart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@color/white"
        chart:chart_axisColor="@color/line_grey"
        chart:chart_labelColor="@color/red"
        chart:chart_axisBorderSpacing="25dp"
        />



</LinearLayout>